--- a/portfolio_css.css
+++ b/portfolio_css.css
@@ -100,12 +100,12 @@ color: #fff;}
 background-image: url('images/silk-bg.jpg');
  background-repeat: repeat repeat;
 /* height: 750px;*/
- padding: 50px 0;
+ padding: 50px 0px;
 }
 .work_image{
 /*height: 300px;
 width: 300px;*/
-margin: 15px;
+/*margin: 15px;*/
 border: 1px solid #5b5955;
 }
 .skills{
