--- a/portfolio_css.css
+++ b/portfolio_css.css
@@ -110,9 +110,9 @@ background-image: url('images/silk-bg.jpg');
 }
 .contacttext{
 font-family: "Adobe Caslon Pro", "Hoefler Text", Georgia, Garamond, Times, serif;
-padding: 5px 30px;
+text-align: left;
 color: white;
-font-size: 10px;
+
 }
 .work_image{
 /*height: 300px;
@@ -203,7 +203,10 @@ font-family: "Adobe Caslon Pro", "Hoefler Text", Georgia, Garamond, Times, serif
 		height: 1300px;
 	}
 	.contact{
-	height: 250px;}
+	height: 400px;}
+	.contacttext{
+	font-size: 12px;
+	}
 	}
 
     /* Extra Small Devices, Phones */ 
@@ -271,7 +274,10 @@ font-family: "Adobe Caslon Pro", "Hoefler Text", Georgia, Garamond, Times, serif
 		width: 300px;
 	}
 	.contact{
-	height: 270px;
+	height: 250px;
+	}
+	.contacttext{
+	font-size: 17px;
 	}
 	}
 
